--- a/index.html
+++ b/index.html
@@ -3,15 +3,6 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-$primary: #0099ff;
-$secondary: gray;
-$roundness: 5px;
-
-$sliderHeight: 4px;
-$handleSize: 20px;
-$valueWidth: 90px;
-$labelMarkerHeight: 12px;
-
 body {
   font-family: Helvetica, sans-serif;
 }
@@ -22,135 +13,116 @@ body {
 
 .rangeslider {
   position: relative;
-  height: $sliderHeight;
-  border-radius: $roundness;
+  height: 4px;
+  border-radius: 5px;
   width: 100%;
-  background-color: $secondary;
-
-  &__handle {
-    transition: background-color 0.2s;
-    box-sizing: border-box;
-    width: $handleSize;
-    height: $handleSize;
-    border-radius: 100%;
-    background-color: $primary;
-    touch-action: pan-y;
-    cursor: pointer;
-    display: inline-block;
-    position: absolute;
-    z-index: 3;
-    top: -($handleSize/2) + ($sliderHeight/2);
-    box-shadow: 0 1px 3px rgba(black, 0.5), inset 0 0 0 2px white;
-
-    &__value {
-      transition: background-color 0.2s, box-shadow 0.1s, transform 0.1s;
-      box-sizing: border-box;
-      width: $valueWidth;
-      text-align: center;
-      padding: 10px;
-      background-color: $primary;
-      border-radius: $roundness;
-      color: white;
-      left: -($valueWidth/2 - $handleSize/2);
-      top: -55px;
-      position: absolute;
-      white-space: nowrap;
-      border-top: 1px solid darken($primary, 10%);
-      box-shadow: 0 -4px 1px rgba(black, 0.07), 0 -5px 20px rgba(black, 0.3);
-
-      &:before {
-        transition: border-top-color 0.2s;
-        position: absolute;
-        bottom: -10px;
-        left: calc(50% - 10px);
-        content: "";
-        width: 0;
-        height: 0;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        border-top: 10px solid;
-        border-top-color: $primary;
-      }
-
-      &:after {
-        content: " cm";
-      }
-    }
-  }
-
-  &__fill {
-    position: absolute;
-    top: 0;
-    z-index: 1;
-    height: 100%;
-    background-color: $primary;
-    border-radius: $roundness;
-  }
-
-  &__labels {
-    position: absolute;
-    width: 100%;
-    z-index: 2;
-    display: flex;
-    justify-content: space-between;
-
-    &__label {
-      font-size: 0.75em;
-      position: relative;
-      padding-top: 15px;
-      color: $secondary;
-
-      &:before {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        content: "";
-        width: 1px;
-        height: $labelMarkerHeight - 3px;
-        border-radius: 1px;
-        background-color: rgba($secondary, 0.5);
-      }
-
-      &:first-child:before,
-      &:last-child:before {
-        height: $labelMarkerHeight;
-        width: 2px;
-      }
-
-      &:first-child:before {
-        background-color: $primary;
-      }
-      &:last-child:before {
-        background-color: $secondary;
-      }
-
-      &:first-child {
-        transform: translateX(-48%);
-      }
-      &:last-child {
-        transform: translateX(48%);
-      }
-    }
-  }
-
-  // active state
-  &.rangeslider--active {
-    .rangeslider__handle {
-      &,
-      * {
-        background-color: lighten($primary, 10%);
-      }
-      *:before {
-        border-top-color: lighten($primary, 10%);
-      }
-    }
-
-    .rangeslider__handle__value {
-      transform: translateY(-5px);
-      box-shadow: 0 -3px 2px rgba(black, 0.04), 0 -9px 25px rgba(black, 0.15);
-    }
-  }
+  background-color: gray;
+}
+.rangeslider__handle {
+  transition: background-color 0.2s;
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background-color: #0099ff;
+  touch-action: pan-y;
+  cursor: pointer;
+  display: inline-block;
+  position: absolute;
+  z-index: 3;
+  top: -8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), inset 0 0 0 2px white;
+}
+.rangeslider__handle__value {
+  transition: background-color 0.2s, box-shadow 0.1s, transform 0.1s;
+  box-sizing: border-box;
+  width: 90px;
+  text-align: center;
+  padding: 10px;
+  background-color: #0099ff;
+  border-radius: 5px;
+  color: white;
+  left: -35px;
+  top: -55px;
+  position: absolute;
+  white-space: nowrap;
+  border-top: 1px solid #007acc;
+  box-shadow: 0 -4px 1px rgba(0, 0, 0, 0.07), 0 -5px 20px rgba(0, 0, 0, 0.3);
+}
+.rangeslider__handle__value:before {
+  transition: border-top-color 0.2s;
+  position: absolute;
+  bottom: -10px;
+  left: calc(50% - 10px);
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid;
+  border-top-color: #0099ff;
+}
+.rangeslider__handle__value:after {
+  content: " cm";
+}
+.rangeslider__fill {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  height: 100%;
+  background-color: #0099ff;
+  border-radius: 5px;
+}
+.rangeslider__labels {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+}
+.rangeslider__labels__label {
+  font-size: 0.75em;
+  position: relative;
+  padding-top: 15px;
+  color: gray;
+}
+.rangeslider__labels__label:before {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  content: "";
+  width: 1px;
+  height: 9px;
+  border-radius: 1px;
+  background-color: rgba(128, 128, 128, 0.5);
+}
+.rangeslider__labels__label:first-child:before, .rangeslider__labels__label:last-child:before {
+  height: 12px;
+  width: 2px;
+}
+.rangeslider__labels__label:first-child:before {
+  background-color: #0099ff;
+}
+.rangeslider__labels__label:last-child:before {
+  background-color: gray;
+}
+.rangeslider__labels__label:first-child {
+  transform: translateX(-48%);
+}
+.rangeslider__labels__label:last-child {
+  transform: translateX(48%);
+}
+.rangeslider.rangeslider--active .rangeslider__handle,
+.rangeslider.rangeslider--active .rangeslider__handle * {
+  background-color: #33adff;
+}
+.rangeslider.rangeslider--active .rangeslider__handle *:before {
+  border-top-color: #33adff;
+}
+.rangeslider.rangeslider--active .rangeslider__handle__value {
+  transform: translateY(-5px);
+  box-shadow: 0 -3px 2px rgba(0, 0, 0, 0.04), 0 -9px 25px rgba(0, 0, 0, 0.15);
 }
 
 </style>
