--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@ input::-moz-focus-inner {
     <input class="input-range" type="range" value="250" min="1" max="500">
     <span class="range-value"></span>
 </div> 
-
-<script>
+<script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
+  
+  <script>
 var range = $('.input-range'),
     value = $('.range-value');
     
