--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body {
   src="https://code.jquery.com/jquery-3.6.1.min.js"
   integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
   crossorigin="anonymous"></script>
-  
+  <script>
 $('input[type="range"]').rangeslider({
   // Feature detection the default is `true`.
     // Set this to `false` if you want to use
@@ -178,6 +178,6 @@ $('input[type="range"]').rangeslider({
     // Callback function
     onSlideEnd: function(position, value) {}
 });
-
+  </script>
 </body>
 </html>
